--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "ai": "^5.0.108",
     "next": "16.0.8",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "vercel": "^49.1.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
